--- a/EventExploreServer/logging.conf
+++ b/EventExploreServer/logging.conf
@@ -3,11 +3,13 @@ keys=root,trace,debug
 
 [handlers]
 #keys=console,debug_handler
-keys=console,info_file_handler,error_file_handler,debug_handler,debug_file_handler
+keys=console,info_file_handler,error_file_handler,debug_handler,debug_file_handler,trace_file_handler
 
 [formatters]
 keys=simpleFormatter,debugFormatter
 
+
+# loggers
 [logger_root]
 level=INFO
 #handlers=console
@@ -15,7 +17,7 @@ handlers=console,info_file_handler,error_file_handler
 
 [logger_trace]
 level=INFO
-handlers=console
+handlers=console,trace_file_handler
 qualname=trace
 propagate=0
 
@@ -25,6 +27,8 @@ handlers=debug_handler,debug_file_handler
 qualname=debug
 propagate=0
 
+
+# handlers
 [handler_debug_handler]
 class=StreamHandler
 level=DEBUG
@@ -55,10 +59,18 @@ level=ERROR
 formatter=simpleFormatter
 args=('data/logs/errors.log', 'd', 1)
 
+[handler_trace_file_handler]
+class=handlers.TimedRotatingFileHandler
+level=INFO
+formatter=simpleFormatter
+args=('data/logs/trace.log', 'd', 1)
+
+
+# formatters
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
 
 [formatter_debugFormatter]
-format=%(levelname)s - %(filename)s - %(message)s
+format=%(asctime)s - %(levelname)s - %(filename)s - %(message)s
 datefmt=
